--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 <body>
     <h1>Práctica 1 - DNS y Hosting</h1>
 
-    <h2>Datos del Alumno</h2>
-
     <p>
-        Sitio web creado por: <strong>[SUSTITUYE ESTO POR TUS APELLIDOS Y NOMBRE]</strong>
+        Sitio web creado por: <strong>Samuel Mouriño Cernadas</strong>
     </p>
 
     <p>
-        Contacto: <a href="mailto:tucorreo@dominio.com">tucorreo@dominio.com</a>
+        Contacto: <a href="samuel.mourino@udc.es">samuel.mourino@udc.es</a>
     </p>
 
     <hr>
