--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Práctica 1 - DNS y Hosting</h1>
 
+    <h2>Datos del Alumno</h2>
+    
     <p>
         Sitio web creado por: <strong>Samuel Mouriño Cernadas</strong>
     </p>
